--- a/portfolio/computer.html
+++ b/portfolio/computer.html
@@ -156,23 +156,6 @@
                 <h3 class="answer">(E)以上皆是</h3>
             </div>
             <div class="computer-answer">
-                <p>65536=2^16</p>
-                <p>16/8=2Byte (一px占用2Byte)</p>
-                <p>640*480*2/1024=600</p>
-            </div>
-        </div>
-        <div class="computer-container">
-            <div class="computer-question">
-                <h3>3.下列敘述何者錯誤?</h3>
-            </div>
-            <div class="computer-option">
-                <h3>(A)USB是 universal serial bus的縮寫</h3>
-                <h3>(B)USB最多可串接127個裝置</h3>
-                <h3>(C)USB支援隨插即用</h3>
-                <h3>(D)USB的傳輸速度比序列阜埠快</h3>
-                <h3 class="answer">(E)以上皆是</h3>
-            </div>
-            <div class="computer-answer">
                 <p>(B)USB可以串接128個裝置,只是一個被控制器佔用了</p>
                 <p>(D)PIN腳越多,速度越快</p>
             </div>
@@ -189,12 +172,444 @@
                 <h3 class="answer">(E)以上皆為非揮發性</h3>
             </div>
             <div class="computer-answer">
-                <p>背</p>
+                <p>此四種裝置都為一般使用者會使用到的儲存裝置,如記憶卡等,這類型的儲存裝置資料儲存,斷電後並不會消失,由此可知這些為非揮發性儲存裝置</p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>5.下列哪個技術可以自動辨識連接到電腦的新裝置,有必要時並提醒您安裝驅動程式?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)play and plug</h3>
+                <h3 class="answer">(B)plug and play</h3>
+                <h3>(C)plug and prey</h3>
+                <h3>(D)plug and install</h3>
+                <h3>(E)install and play</h3>
+            </div>
+            <div class="computer-answer">
+                <p>plug and play 簡稱PnP 是一種隨插即用的技術,通常應用在USB上</p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>6. 下列何者與高速運算無關?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)多工處理</h3>
+                <h3>(B)平行處理</h3>
+                <h3 class="answer">(C)DBMS</h3>
+                <h3>(D)語言的陣列運算</h3>
+            </div>
+            <div class="computer-answer">
+                <p>DBMS為資料庫管理系統</p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>7.若磁碟驅動器的轉速為每分鐘 600 圈,則讀取磁碟資料的平均等待時間為何?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)25ms</h3>
+                <h3 class="answer">(B)50ms</h3>
+                <h3>(C)100ms</h3>
+                <h3>(D)200ms</h3>
+            </div>
+            <div class="computer-answer">
+                <p>一分鐘=60000ms 轉一圈=60000/600=100ms</p>
+                <p>平均旋轉時間=0.5*(1/轉速)=0.5*(轉一圈需要的時間)=0.5*100=50ms</p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>8.下列哪個因素不會影響CPU的效能?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)製程</h3>
+                <h3>(B)快取記憶體</h3>
+                <h3>(C)工作時脈</h3>
+                <h3 class="answer">(D)介面卡插槽數</h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>9.下列哪種記憶體的速度最慢？</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)SRAM</h3>
+                <h3>(B)FPM DRAM</h3>
+                <h3 class="answer">(C)EDO DRAM</h3>
+                <h3>(D)SDRAM</h3>
+            </div>
+            <div class="computer-answer">
+                <p>EDO RAM 屬於較早期的記憶體,效能跟現今的RAM比非常差</p>
+            </div>
+        </div>
+        <!-- 10 -->
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>10.掃描器與印表機的解析度單位為何？</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)CPI</h3>
+                <h3>(B)EPI</h3>
+                <h3 class="answer">(C)DPI</h3>
+                <h3>(D)FPI</h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>11.下列何者用來連接高速週邊設備?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)區域匯流排</h3>
+                <h3>(B)資料匯流排</h3>
+                <h3 class="answer">(C)擴充匯流排</h3>
+                <h3>(D)內部匯流排</h3>
+            </div>
+            <div class="computer-answer">
+                <p>此題題意其實為電腦的外部擴充是以哪種匯流排連接至硬體上</p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>12.下列哪種處理器可以幫助 CPU 處理螢幕顯示作業?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)並行運算處理器</h3>
+                <h3>(B)數位訊號處理器</h3>
+                <h3 class="answer">(C)圖形加速處理器</h3>
+                <h3>(D)數值協同處理器</h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>13.下列何者支援熱抽換？</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)PCI</h3>
+                <h3 class="answer">(B)USB</h3>
+                <h3>(C)EISA</h3>
+                <h3>(D)ISA</h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>14.下列何者為揮發性?</h3>
+            </div>
+            <div class="computer-option">
+                <h3 class="answer">(A)RAM</h3>
+                <h3>(B)TAPE</h3>
+                <h3>(C)HDD</h3>
+                <h3>(D)ROM</h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>15.連接 CPU 與其它装置的電路稱為什麼</h3>
+            </div>
+            <div class="computer-option">
+                <h3 class="answer">(A)bus</h3>
+                <h3>(B)translator</h3>
+                <h3>(C)address register</h3>
+                <h3>(D)ALU</h3>
+                <h3>(E)EU</h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>16.關開電源後會導致資料遺失的特性稱為什麼?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)nonvolatile</h3>
+                <h3>(B)sequential</h3>
+                <h3>(C)direct</h3>
+                <h3 class="answer">(D)volatile</h3>
+                <h3>(E)random</h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>17.假設螢幕解析度為 800 × 600，32 位元高彩，另外有 PDA 的黑白螢幕解低度為 400 x200，試問，前者所需的記憶體為後者的幾倍?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)6</h3>
+                <h3>(B)48</h3>
+                <h3>(C)96</h3>
+                <h3 class="answer">(D)192</h3>
+            </div>
+            <div class="computer-answer">
+                <p>800*600*32/(400*200)=192</p>
+                <p>注意儲存黑白只要一個bit 0和1即可,千萬不要中陷阱了!</p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>18.下列何者可以用來度量 CPU 的效能？（複選）</h3>
+            </div>
+            <div class="computer-option">
+                <h3 class="answer">(A)FLOPS</h3>
+                <h3 class="answer">(B)MIPS</h3>
+                <h3>(C)MB</h3>
+                <h3>(D)USB</h3>
+                <h3>(E)SCSI</h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>19.下列何者不在 CPU 內部？（複選）</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)ALU</h3>
+                <h3 class="answer">(B)PCB</h3>
+                <h3 class="answer">(C)DISK</h3>
+                <h3>(D)Register</h3>
+                <h3>(E)CU</h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>20.下列何者不屬於電腦匯流排?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)ISA</h3>
+                <h3>(B)EISA</h3>
+                <h3>(C)PCI</h3>
+                <h3>(D)AGP</h3>
+                <h3 class="answer">(E)以上皆是</h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <!-- 20 -->
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>5.下列哪個技術可以自動辨識連接到電腦的新裝置,有必要時並提醒您安裝驅動程式?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)</h3>
+                <h3>(B)</h3>
+                <h3>(C)</h3>
+                <h3>(D)</h3>
+                <h3 class="answer"></h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>5.下列哪個技術可以自動辨識連接到電腦的新裝置,有必要時並提醒您安裝驅動程式?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)</h3>
+                <h3>(B)</h3>
+                <h3>(C)</h3>
+                <h3>(D)</h3>
+                <h3 class="answer"></h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>5.下列哪個技術可以自動辨識連接到電腦的新裝置,有必要時並提醒您安裝驅動程式?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)</h3>
+                <h3>(B)</h3>
+                <h3>(C)</h3>
+                <h3>(D)</h3>
+                <h3 class="answer"></h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>5.下列哪個技術可以自動辨識連接到電腦的新裝置,有必要時並提醒您安裝驅動程式?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)</h3>
+                <h3>(B)</h3>
+                <h3>(C)</h3>
+                <h3>(D)</h3>
+                <h3 class="answer"></h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
             </div>
         </div>
 
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>5.下列哪個技術可以自動辨識連接到電腦的新裝置,有必要時並提醒您安裝驅動程式?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)</h3>
+                <h3>(B)</h3>
+                <h3>(C)</h3>
+                <h3>(D)</h3>
+                <h3 class="answer"></h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>5.下列哪個技術可以自動辨識連接到電腦的新裝置,有必要時並提醒您安裝驅動程式?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)</h3>
+                <h3>(B)</h3>
+                <h3>(C)</h3>
+                <h3>(D)</h3>
+                <h3 class="answer"></h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>5.下列哪個技術可以自動辨識連接到電腦的新裝置,有必要時並提醒您安裝驅動程式?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)</h3>
+                <h3>(B)</h3>
+                <h3>(C)</h3>
+                <h3>(D)</h3>
+                <h3 class="answer"></h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>5.下列哪個技術可以自動辨識連接到電腦的新裝置,有必要時並提醒您安裝驅動程式?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)</h3>
+                <h3>(B)</h3>
+                <h3>(C)</h3>
+                <h3>(D)</h3>
+                <h3 class="answer"></h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>5.下列哪個技術可以自動辨識連接到電腦的新裝置,有必要時並提醒您安裝驅動程式?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)</h3>
+                <h3>(B)</h3>
+                <h3>(C)</h3>
+                <h3>(D)</h3>
+                <h3 class="answer"></h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>5.下列哪個技術可以自動辨識連接到電腦的新裝置,有必要時並提醒您安裝驅動程式?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)</h3>
+                <h3>(B)</h3>
+                <h3>(C)</h3>
+                <h3>(D)</h3>
+                <h3 class="answer"></h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>5.下列哪個技術可以自動辨識連接到電腦的新裝置,有必要時並提醒您安裝驅動程式?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)</h3>
+                <h3>(B)</h3>
+                <h3>(C)</h3>
+                <h3>(D)</h3>
+                <h3 class="answer"></h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>5.下列哪個技術可以自動辨識連接到電腦的新裝置,有必要時並提醒您安裝驅動程式?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)</h3>
+                <h3>(B)</h3>
+                <h3>(C)</h3>
+                <h3>(D)</h3>
+                <h3 class="answer"></h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+        <div class="computer-container">
+            <div class="computer-question">
+                <h3>5.下列哪個技術可以自動辨識連接到電腦的新裝置,有必要時並提醒您安裝驅動程式?</h3>
+            </div>
+            <div class="computer-option">
+                <h3>(A)</h3>
+                <h3>(B)</h3>
+                <h3>(C)</h3>
+                <h3>(D)</h3>
+                <h3 class="answer"></h3>
+            </div>
+            <div class="computer-answer">
+                <p></p>
+            </div>
+        </div>
+
+
     </section>
     <!-- end of computer -->
+    <section class="space"></section>
 
 
     <!-- contact -->
