--- a/portfolio/computer.html
+++ b/portfolio/computer.html
@@ -2278,7 +2278,7 @@
                 <p></p>
             </div>
         </div>
-        <div class="computer-container">
+        <div class="computer-container">`
             <div class="computer-question">
                 <h3>對於 ADSL 的敘述，何者錯誤?</h3>
             </div>
